Sync up from loom repo