@@ -25,9 +25,10 @@
  * @test
  * @bug 8337199
  * @summary Basic test for jcmd Thread.vthread_summary
+ * @requires vm.continuations
  * @modules jdk.jcmd
  * @library /test/lib
- * @run main/othervm VThreadSummaryTest
+ * @run junit/othervm VThreadSummaryTest
  */
 
 import java.net.InetAddress;
@@ -35,53 +36,133 @@ import java.net.InetSocketAddress;
 import java.net.ServerSocket;
 import java.net.Socket;
 import java.net.SocketTimeoutException;
+import java.util.List;
+import java.util.Objects;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.Executors;
+import java.util.concurrent.ExecutorService;
+import java.util.concurrent.ForkJoinPool;
+import java.util.concurrent.ForkJoinWorkerThread;
+import java.util.concurrent.ScheduledThreadPoolExecutor;
+import java.util.concurrent.atomic.AtomicBoolean;
+import java.util.stream.IntStream;
+import java.lang.management.ManagementFactory;
+import jdk.management.VirtualThreadSchedulerMXBean;
+
 import jdk.test.lib.dcmd.PidJcmdExecutor;
 import jdk.test.lib.process.OutputAnalyzer;
+import org.junit.jupiter.api.Test;
+import static org.junit.jupiter.api.Assertions.*;
 
-public class VThreadSummaryTest {
-    public static void main(String[] args) throws Exception {
+class VThreadSummaryTest {
 
-        // ensure common pool is initialized
-        CompletableFuture.runAsync(() -> { });
+    private OutputAnalyzer jcmd() {
+        return new PidJcmdExecutor().execute("Thread.vthread_summary");
+    }
 
-        // ensure at least one thread pool executor and one thread-per-task executor
-        try (var pool = Executors.newFixedThreadPool(1);
-             var executor = Executors.newVirtualThreadPerTaskExecutor()) {
+    /**
+     * Test that output includes the default scheduler and timeout schedulers.
+     */
+    @Test
+    void testSchedulers() {
+        // ensure default scheduler are timeout schedulers are initialized
+        Thread.startVirtualThread(() -> { });
 
-            // ensure poller mechanism is initialized by doing blocking I/O on a virtual thread
+        jcmd().shouldContain("Virtual thread scheduler:")
+                .shouldContain(Objects.toIdentityString(defaultScheduler()))
+                .shouldContain("Timeout schedulers:")
+                .shouldContain("[0] " + ScheduledThreadPoolExecutor.class.getName());
+    }
+
+    /**
+     * Test that the output includes the read and writer I/O pollers.
+     */
+    @Test
+    void testPollers() throws Exception {
+        // do blocking I/O op on a virtual thread to ensure poller mechanism is initialized
+        try (var executor = Executors.newVirtualThreadPerTaskExecutor()) {
             executor.submit(() -> {
                 try (var listener = new ServerSocket()) {
                     InetAddress lb = InetAddress.getLoopbackAddress();
                     listener.bind(new InetSocketAddress(lb, 0));
                     listener.setSoTimeout(1000);
-                    try {
-                        Socket s = listener.accept();
-                        throw new RuntimeException("Connection from " + s + " ???");
+                    try (Socket s = listener.accept()) {
+                        fail("Connection from " + s.getRemoteSocketAddress());
                     } catch (SocketTimeoutException e) {
                         // expected
                     }
                 }
                 return null;
             }).get();
+        }
 
-            OutputAnalyzer output = new PidJcmdExecutor().execute("Thread.vthread_summary");
+        jcmd().shouldContain("Read I/O pollers:")
+                .shouldContain("Write I/O pollers:")
+                .shouldContain("[0] sun.nio.ch");
+    }
 
-            // thread groupings
-            output.shouldContain("<root>")
-                    .shouldContain("java.util.concurrent.ThreadPoolExecutor")
-                    .shouldContain("java.util.concurrent.ThreadPerTaskExecutor")
-                    .shouldContain("ForkJoinPool.commonPool");
+    /**
+     * Test that the output includes thread groupings.
+     */
+    @Test
+    void testThreadGroupings() {
+        // ensure common pool is initialized
+        CompletableFuture.runAsync(() -> { });
 
-            // virtual thread schedulers
-            output.shouldContain("Default virtual thread scheduler:")
-                    .shouldContain("Running, parallelism")
-                    .shouldContain("Timeout schedulers:");
+        try (var pool = Executors.newFixedThreadPool(1);
+             var executor = Executors.newVirtualThreadPerTaskExecutor()) {
 
-            // I/O pollers
-            output.shouldContain("Read I/O pollers:")
-                    .shouldContain("Write I/O pollers:");
+            jcmd().shouldContain("<root>")
+                    .shouldContain("ForkJoinPool.commonPool")
+                    .shouldContain(Objects.toIdentityString(pool))
+                    .shouldContain(Objects.toIdentityString(executor));
+        }
+    }
+
+    /**
+     * Test that output is truncated when there are too many thread groupings.
+     */
+    @Test
+    void testTooManyThreadGroupings() {
+        List<ExecutorService> executors = IntStream.range(0, 1000)
+                .mapToObj(_ -> Executors.newCachedThreadPool())
+                .toList();
+        try {
+            jcmd().shouldContain("<root>")
+                    .shouldContain("<truncated ...>");
+        } finally {
+            executors.forEach(ExecutorService::close);
+        }
+    }
+
+    /**
+     * Returns the virtual thread default scheduler. This implementation works by finding
+     * all FJ worker threads and mapping them to their pool. VirtualThreadSchedulerMXBean
+     * is used to temporarily changing target parallelism to an "unique" value, make it
+     * possbile to find the right pool.
+     */
+    private ForkJoinPool defaultScheduler() {
+        var done = new AtomicBoolean();
+        Thread vthread = Thread.startVirtualThread(() -> {
+            while (!done.get()) {
+                Thread.onSpinWait();
+            }
+        });
+        var bean = ManagementFactory.getPlatformMXBean(VirtualThreadSchedulerMXBean.class);
+        int parallelism = bean.getParallelism();
+        try {
+            bean.setParallelism(133);
+            return Thread.getAllStackTraces()
+                    .keySet()
+                    .stream()
+                    .filter(ForkJoinWorkerThread.class::isInstance)
+                    .map(t -> ((ForkJoinWorkerThread) t).getPool())
+                    .filter(p -> p.getParallelism() == 133)
+                    .findAny()
+                    .orElseThrow();
+        } finally {
+            bean.setParallelism(parallelism);
+            done.set(true);
         }
     }
 }
